Arrays.asList를 List.of로 변경
사용 목적에 따라 AbstractImmutableList를 상속받는 List.of를 사용하여 불변 컬렉션으로 변경